logs/neg/t1241-neg.log
t1241.scala:5: error: class type required but AnyRef found
  val x4 = new T { def hello() { println("4") } }        // error!
               ^
one error found
